# SHU-Social-Robot

./: README.md
alireza/: CMakeLists.txt  package.xml
alireza/data/: badpersons.txt
alireza/launch/: alireza.launch  betty_cmd.launch
alireza/msg/: Hri.msg  SpeechFeedback.msg  VoiceCmd.msg
alireza/src/: behaviour_handler.cpp  preacher.cpp  qr_tracker.cpp  visual_feedback.cpp
alireza/src/Corpus files/: betty_cmd.log_pronounce  betty_cmd.sent
alireza/src/betty_old/: behaviour_handler(modified).cpp  behaviour_handler.cpp  behaviour_handler_original.cpp  preacher.cpp  preacher_original.cpp
alireza/src/emma_old/: behaviour_handler_previous.cpp  preacher_previous.cpp
alireza/voice/: betty_cmd.dic  betty_cmd.lm  betty_cmd.vocab
alireza/voice/archive_new/: betty_cmd.dic  betty_cmd.lm  betty_cmd.log_pronounce  betty_cmd.sent  betty_cmd.vocab
alireza/voice/archive_newer/: betty_cmd.dic  betty_cmd.lm  betty_cmd.log_pronounce  betty_cmd.sent  betty_cmd.vocab
alireza/voice/archive_newest/: betty_cmd.dic  betty_cmd.lm  betty_cmd.log_pronounce  betty_cmd.sent  betty_cmd.vocab
alireza/voice/archive_old/: betty_cmd.corpus  betty_cmd.dic  betty_cmd.lm
alireza/voice/archive_older/: 4952.log_pronounce  4952.sent  4952.vocab  TAR4952.tgz  betty_cmd.corpus  betty_cmd.dic  betty_cmd.lm
anthony/: CMakeLists.txt  Read-Me  package.xml
anthony/include/: touch_command.h
anthony/launch/: all (copy).launch  all.launch  face_rec.launch  touchscreen_command.launch
anthony/msg/: faceArray.msg  touch_in.msg
anthony/src/: face_detector.cpp  touch_command.cpp  touchscreen_reader.cpp
